--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             poster="MY_VIDEO_POSTER.jpg"
             data-setup="{}"
           >
-          <source src="https://livestream.lumpentv.com.ar:8080/hls/lumpen.m3u8" type="application/x-mpegURL" />
+          <source src="https://livestream.lumpentv.com.ar/hls/lumpen.m3u8" type="application/x-mpegURL" />
             
             
           </video>
