--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <video
             id="my-video"
             class="video-js"
+            autoplay
             controls
             preload="auto"
             poster="MY_VIDEO_POSTER.jpg"
