--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             id="my-video"
             class="video-js"
             autoplay
+            
             controls
             preload="auto"
-            poster="MY_VIDEO_POSTER.jpg"
+            poster="poster.png"
             data-setup="{}"
           >
           <source src="https://livestream.lumpentv.com.ar/hls/lumpen.m3u8" type="application/x-mpegURL" />
