--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <video
             id="my-video"
             class="video-js"
-            autoplay
+            autoplay='play'
             
             controls
             preload="auto"
